# vagrantkind

./: .gitignore  README.md  Vagrantfile  amd64-packages.sh  amd64-tools.sh  argocd-values-istio.yaml  argocd.sh  arm64-packages.sh  arm64-steps.md  arm64-tools.sh  arm64.txt  certmanager.sh  cockpit.sh  coding.sh  context_merge.sh  docker.sh  drain.sh  echo-pod-service.yml  echo-service-istio-ssl.yaml  echo-service-istio.yaml  fix-libvirt-forwaring.sh  install-argocd-workflows.sh  install-argocd.sh  install-certmanager.sh  install-istio.sh  install-kube-config.sh  install-local-k3s-cilium.sh  install-local-k3s-node.sh  install-local-k3s-update.sh  install-local-k3s.sh  install-local-kind.sh  install-longhorn-backup.sh  install-longhorn.sh  install-metallb.sh  install-nfs.sh  install-velero.sh  install-wsl-kind.sh  install-wsl-metallb.sh  installer.sh  istio-operator-settings.yaml  (+34 more)
analytics/: README.md  kubectl.py  main.py  output_csv.py  output_json.py  output_table.py  pyproject.toml
apicurio/: docker-compose.yml  install-apicurio.sh  readme.md
argocd/: README.md  cluster-local.yaml  install-argocd-project-apps.sh  install-argocd-workflows-builds.sh  install-argocd-workflows-events.sh  main.py  pyproject.toml  readme.md  selector.py
ca_dns/: application.properties  ca-gmk.pem  ca-gmkc.pem  create-ca.sh  gmk-truststore.p12  readme.md  reflector.sh  setup-ca-trust.sh  setup.sh  truststore.md  truststore.sh
caddy/: caddy.py  readme.md
external-mysqldb/: deploy-db-client.sh  external-db-bench.md
mariadb-replica/: README.md  configurations.yaml  secrets.yaml  (+2 more)
(+194 files in other folders)
