[project]
name = "analytics"
version = "0.1.0"
description = "Kubectl analytics tool"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "kubernetes>=29.0.0",
    "rich>=13.7.0",
    "typer>=0.12.0",
]

[project.scripts]
analytics = "main:main"

[tool.setuptools]
py-modules = ["main", "kubectl", "output_table", "output_json", "output_csv"]
